--- a/data/interfaces/sysdmngr.ui
+++ b/data/interfaces/sysdmngr.ui
@@ -16,5 +16,6 @@
     </property>
     <property name="default-height">900</property>
     <property name="default-width">1600</property>
+    <property name="title">Sysd Manager</property>
   </object>
 </interface>
