--- a/data/interfaces/grid_cell.ui
+++ b/data/interfaces/grid_cell.ui
@@ -1,5 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
+<!-- Created with Cambalache 0.90.4 -->
 <interface>
+  <!-- interface-name grid_cell.ui -->
+  <requires lib="gtk" version="4.12"/>
   <template class="GridCell" parent="GtkWidget">
     <child>
       <object class="GtkInscription" id="name">
