--- a/data/interfaces/sysdmngr.ui
+++ b/data/interfaces/sysdmngr.ui
@@ -10,12 +10,27 @@
           <object class="GtkBox"/>
         </property>
         <property name="start-child">
-          <object class="GtkBox"/>
+          <object class="GtkBox">
+            <child>
+              <object class="GtkSearchBar"/>
+            </child>
+            <child>
+              <object class="GtkScrollbar" id="unit_col_view_scrolled_window">
+                <property name="focusable">True</property>
+                <child>
+                  <object class="GtkColumnView" id="unit_browser"/>
+                </child>
+              </object>
+            </child>
+          </object>
         </property>
       </object>
     </property>
     <property name="default-height">900</property>
     <property name="default-width">1600</property>
     <property name="title">Sysd Manager</property>
+    <property name="titlebar">
+      <object class="GtkHeaderBar"/>
+    </property>
   </object>
 </interface>
