primitive service info

--- a/data/interfaces/service_status.ui
+++ b/data/interfaces/service_status.ui
@@ -1,9 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.90.4 -->
 <interface>
-  <!-- interface-name service_status.ui -->
-  <requires lib="gtk" version="4.6" />
-  <object class="GtkGrid">
+  <requires lib="gtk" version="4.12" />
+  <object class="GtkGrid" id="service_layout">
     <property name="baseline-row">5</property>
     <property name="column-homogeneous">True</property>
     <property name="column-spacing">5</property>
