--- a/data/interfaces/service_status.ui
+++ b/data/interfaces/service_status.ui
@@ -3,7 +3,7 @@
 <interface>
   <!-- interface-name service_status.ui -->
   <requires lib="gtk" version="4.12" />
-  <template class="service_layout" parent="GtkGrid">
+  <template class="ServiceStatus" parent="GtkGrid">
     <property name="baseline-row">5</property>
     <property name="column-homogeneous">True</property>
     <property name="column-spacing">5</property>
@@ -156,9 +156,9 @@
       </object>
     </child>
     <child>
-      <object class="GtkButton" id="refresh">
+      <object class="GtkButton">
         <property name="label">Refresh</property>
-        <signal name="clicked" handler="handle_refresh_click" />
+        <signal name="clicked" handler="handle_refresh_click" swapped="true"/>
         <layout>
           <property name="column">0</property>
           <property name="row">9</property>
@@ -166,12 +166,12 @@
       </object>
     </child>
     <child>
-      <object class="GtkButton" id="all_details">
+      <object class="GtkButton">
         <property name="label">All details</property>
         <signal name="clicked" handler="handle_all_details_click" />
         <layout>
-          <property name="column">1</property>
-          <property name="row">9</property>
+          <property name="column">0</property>
+          <property name="row">10</property>
         </layout>
       </object>
     </child>
