--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -24,7 +24,6 @@
                       </object>
                     </property>
                     <property name="valign">center</property>
-                    <signal name="activate" handler="dbus_level_dropdown_activate" swapped="yes"/>
                   </object>
                 </child>
               </object>
@@ -37,6 +36,18 @@
                   <object class="GtkSwitch" id="journal_colors">
                     <property name="valign">baseline-center</property>
                     <signal name="state-set" handler="journal_switch_state_set" swapped="yes"/>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="subtitle">Display a nice text highligth for the unit file</property>
+                <property name="title">Unit file highlighting</property>
+                <child>
+                  <object class="GtkSwitch" id="unit_file_highlight">
+                    <property name="valign">baseline-center</property>
+                    <signal name="state-set" handler="unit_file_highlighting_state_set" swapped="yes"/>
                   </object>
                 </child>
               </object>
