--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -2,28 +2,18 @@
 <!-- Created with Cambalache 0.92.1 -->
 <interface>
   <!-- interface-name preferences.ui -->
-  <requires lib="gtk" version="4.10" />
-  <requires lib="libadwaita" version="1.5" />
+  <requires lib="gtk" version="4.10"/>
+  <requires lib="libadwaita" version="1.5"/>
   <template class="PreferencesWindow" parent="AdwPreferencesDialog">
     <child>
       <object class="AdwToolbarView">
-        <child type="top">
-          <object class="AdwHeaderBar">
-            <property name="title-widget">
-              <object class="AdwWindowTitle">
-                <property name="title" translatable="yes">Preferences</property>
-              </object>
-            </property>
-          </object>
-        </child>
         <property name="content">
           <object class="GtkCenterBox">
-            <property name="vexpand">True</property>
             <property name="orientation">vertical</property>
+            <property name="vexpand">True</property>
             <child type="start">
               <object class="AdwBanner" id="preference_banner">
-                <property name="title">It's your first connection, set the Dbus-level to "System" if
-                  you want to see all Systend units. asdf asdf asdfasdf asdf asdf asdf as df</property>
+                <property name="title">It's your first connection, set the Dbus-level to &lt;u&gt;System&lt;/u&gt; if  you want to see all Systemd units.</property>
               </object>
             </child>
             <child type="center">
@@ -56,8 +46,7 @@
                         <child>
                           <object class="GtkSwitch" id="journal_colors">
                             <property name="valign">baseline-center</property>
-                            <signal name="state-set" handler="journal_switch_state_set"
-                              swapped="yes" />
+                            <signal name="state-set" handler="journal_switch_state_set" swapped="yes"/>
                           </object>
                         </child>
                       </object>
@@ -69,8 +58,7 @@
                         <child>
                           <object class="GtkSwitch" id="unit_file_highlight">
                             <property name="valign">baseline-center</property>
-                            <signal name="state-set" handler="unit_file_highlighting_state_set"
-                              swapped="yes" />
+                            <signal name="state-set" handler="unit_file_highlighting_state_set" swapped="yes"/>
                           </object>
                         </child>
                       </object>
@@ -81,6 +69,15 @@
             </child>
           </object>
         </property>
+        <child type="top">
+          <object class="AdwHeaderBar">
+            <property name="title-widget">
+              <object class="AdwWindowTitle">
+                <property name="title" translatable="yes">Preferences</property>
+              </object>
+            </property>
+          </object>
+        </child>
       </object>
     </child>
   </template>
